modemfwd: add some unit tests for Modem
This allows us to ensure we don't crash on bad inputs, for
example. More unit tests to complete the initialization
pathway can be done after some other changes to the health
checker, etc.

BUG=b:337858029
TEST=new unit tests

Change-Id: Ia4388b0e2408d96cf0d4e676ebbf3689138054bf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5506357
Reviewed-by: Andrew Lassalle <andrewlassalle@chromium.org>
Tested-by: Eric Caruso <ejcaruso@chromium.org>
Commit-Queue: Eric Caruso <ejcaruso@chromium.org>

--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -136,6 +136,7 @@ if (use.test) {
       "journal_test.cc",
       "metrics_test.cc",
       "modem_flasher_test.cc",
+      "modem_test.cc",
       "prefs_test.cc",
     ]
     configs += [
@@ -146,6 +147,7 @@ if (use.test) {
     pkg_deps = [
       "libchrome-test",
       "libdlcservice-client-test",
+      "libshill-client-test",
     ]
     deps = [
       ":libmodemfw",
