camera: diagnostics: Export mojom bindings
Export camera_diagnostics.mojom by using creating a
camera_diagnostics_ipc.pc using |generate_pkg_config()|.

Other packages can include the mojo file like
#include <camera-diagnostics/camera/mojo/camera_diagnostics.mojom.h>.

BUG=b:336413879
TEST=emerge-brya cros-camera-diagnostics
TEST=emerge-brya cros-camera-diagnostics-tests

Change-Id: I7c437557647d6619ad7c76ffc0583a6578d2229b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5508096
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>
Tested-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -4,20 +4,39 @@
 
 import("//common-mk/install_seccomp_policy.gni")
 import("//common-mk/mojom_bindings_generator.gni")
+import("//common-mk/pkg_config.gni")
 
 group("all") {
   deps = [
+    ":camera_diagnostics_ipc",
     ":cros_camera_diagnostics_service",
     ":install_cros_camera_diagnostics_conf",
     ":install_cros_camera_diagnostics_mojo",
     ":install_cros_camera_diagnostics_policy",
     ":install_minijail_conf",
+    ":libcros_camera_diagnostics_mojom",
   ]
 }
 
-generate_mojom_bindings("cros_camera_diagnostics_mojom") {
+generate_mojom_bindings("libcros_camera_diagnostics_mojom") {
   sources = [ "//camera/mojo/camera_diagnostics.mojom" ]
   mojo_root = "${platform2_root}"
+  use_pic = true
+  install_package = "camera-diagnostics"
+}
+
+generate_pkg_config("camera_diagnostics_ipc") {
+  name = "camera_diagnostics_ipc"
+  description = "Mojom bindings for camera diagnostics"
+  version = getenv("PV")
+  requires_private = [ "libchrome" ]
+  requires = [ "libmojo" ]
+  libs = [ "-lcros_camera_diagnostics_mojom" ]
+
+  # Other packages should include files from
+  # /usr/include/camera-diagnostics/camera/mojo.
+  cflags = [ "-I/usr/include/camera-diagnostics" ]
+  install = true
 }
 
 executable("cros_camera_diagnostics_service") {
@@ -49,7 +68,7 @@ executable("cros_camera_diagnostics_service") {
     "rt",
   ]
   deps = [
-    ":cros_camera_diagnostics_mojom",
+    ":libcros_camera_diagnostics_mojom",
     "//camera/diagnostics/analyzers:analyzers",
     "//ml_core/dlc:dlc_client",
   ]
