heartd: Add udev rule to modify user group for Intel PMT nodes
With this, heartd can access the Intel PMT telemetry nodes without being
root.

BUG=b:289023919
TEST=1. FEATURES= emerge-rex heartd
     2. cros deploy $IP heartd
     3. Reboot DUT
     4. Udev rule takes effect.

Cq-Depend: chromium:5507175
Change-Id: I033318b9c18827dd20657f031c1fab6682876ddc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5507134
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/BUILD.gn
+++ b/heartd/BUILD.gn
@@ -13,6 +13,7 @@ group("all") {
     ":install_mojo_service_manager_policy_config",
     ":install_seccomp_policy",
     ":install_tmpfiles_config",
+    ":install_udev_rule",
   ]
 
   if (use.test) {
@@ -65,6 +66,11 @@ install_config("install_seccomp_policy") {
 install_config("install_tmpfiles_config") {
   sources = [ "tmpfiles.d/heartd.conf" ]
   install_path = "tmpfilesd"
+}
+
+install_config("install_udev_rule") {
+  sources = [ "udev/99-intel-pmt-permissions.rules" ]
+  install_path = "/lib/udev/rules.d"
 }
 
 if (use.test) {
