federated: Switch to USE=debug for dev helpers
* Use USE=debug instead of USE=local_federated_server to control handy
  developer behaviors.
* Move info about local Brella server to a comment. This should not be
  needed as often going forward.

Together these changes should make it easier to do manual tests in
advance of uprevs.

BUG=b:318028376
TEST=USE=debug cros_sdk emerge-$B federated-service, and then
TEST=cros deploy and verify similar to go/cros-fcp-uprev.
TEST=echo "" > /var/log/messages && restart federated-service

Cq-Depend: chromium:5507702
Change-Id: Ifca74cff2f01fdd41e4e1cf0b2bb59ca452d3cc2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5507701
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Tested-by: Andrew Moylan <amoylan@chromium.org>
Reviewed-by: Xinglong Luan <alanlxl@chromium.org>
Commit-Queue: Andrew Moylan <amoylan@chromium.org>

--- a/federated/BUILD.gn
+++ b/federated/BUILD.gn
@@ -88,7 +88,7 @@ static_library("federated_common") {
     "storage_manager.cc",
     "utils.cc",
   ]
-  defines = [ "USE_LOCAL_FEDERATED_SERVER=${use.local_federated_server}" ]
+  defines = [ "USE_DEBUG=${use.debug}" ]
   all_dependent_configs = [ ":federated_common_pkg_deps" ]
   pkg_deps = [
     "protobuf",
