multiple: Remove libtpm_manager
libtpm_manager is only for TpmManagerUtility, which has already
been obseleted. Let's remove it.

BUG=b:313547077
TEST=CQ

Change-Id: I243b66d4bc5fe8a7324fcbcac4a1a65ff60d0d40
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514547
Reviewed-by: Yi Chou <yich@google.com>
Reviewed-by: John L Chen <zuan@chromium.org>
Tested-by: Ching-Kang Yen <chingkang@chromium.org>
Commit-Queue: Ching-Kang Yen <chingkang@chromium.org>

--- a/hwsec-test-utils/BUILD.gn
+++ b/hwsec-test-utils/BUILD.gn
@@ -72,10 +72,7 @@ executable("hwsec-ownership-id") {
   configs += [ ":target_defaults" ]
   install_path = "bin"
 
-  libs = [
-    "hwsec-foundation",
-    "tpm_manager",
-  ]
+  libs = [ "hwsec-foundation" ]
 
   pkg_deps = [
     "openssl",
