cryptohome: Add chrome to ACL for GetVaultProperties
This CL also adds the GetVaultProperties to cryptohome CLI.

BUG=b:338187034
TEST=Build tool and run on device

Cq-Depend:chromium:5505853
Change-Id: I7f53af0294b3560709283cdeb974e33bea331690
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5510802
Commit-Queue: Hardik Goyal <hardikgoyal@chromium.org>
Auto-Submit: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Behnood Momenzadeh <behnoodm@chromium.org>
Tested-by: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Zi Lin <lziest@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -25,6 +25,9 @@
            send_member="IsMounted"/>
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
+           send_member="GetVaultProperties"/>
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
            send_member="Unmount"/>
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
