thinpool_migrator: Switch to libvpd
Switch over the static functions to make uniform
use of libvpd/fake vpd. Add unittest for resuming
from an interrupted migration.

BUG=b:232006113
TEST=tast run statefulmigration.VaultCompat

Cq-Depend: chromium:5532549
Change-Id: I366f1377e4b2b08a1985d8901016213968393b43
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5531138
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/thinpool_migrator/BUILD.gn
+++ b/thinpool_migrator/BUILD.gn
@@ -28,6 +28,8 @@ pkg_config("target_defaults") {
     "libmetrics",
     "protobuf",
   ]
+
+  libs = [ "vpd" ]
 }
 
 generate_pkg_config("libthinpool_migrator_pc") {
