fpstudy: Fix archive linking
Fix the sym link path to handle more relative paths.

BUG=b:338125356
TEST=make CONFIG=rex-elan-latest-test -j

Change-Id: I1f37a0eb05f29e87bee54a5c0222d121ef145f2a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5512359
Tested-by: Craig Hesling <hesling@chromium.org>
Commit-Queue: Craig Hesling <hesling@chromium.org>
Reviewed-by: Firas Sammoura <fsammoura@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/biod/study/fpstudy-image-builder/Makefile
+++ b/biod/study/fpstudy-image-builder/Makefile
@@ -86,7 +86,7 @@ $(OUT)/$(BUNDLE) : $(addprefix $(OUT)/,README.html README.md $(IMAGE) checksum.m
 	@echo "# bundling #########################################################"
 	mkdir -p "$(OUT)/archive"
 	tar czvf "$(OUT)/archive/$(BUNDLE_ARCHIVE)" -C "$(OUT)" $(subst $(OUT)/,,$^) || ( rm "$@" && false )
-	ln -f -s "$(OUT)/archive/$(BUNDLE_ARCHIVE)" "$@"
+	ln -f -s "archive/$(BUNDLE_ARCHIVE)" "$@"
 	@#cp "$(OUT)/archive/$(BUNDLE_ARCHIVE)" "$@"
 
 verify :
