regmon: Add flag to enable regmon
Adds the CrOSLateBootRegmonPolicyMonitoringEnabled feature flag. When
the daemon starts up, the feature library is queried and the process
will immediately exit if this flag is not set.

BUG=b:313966354
TEST=cros_run_unit_tests --board=${BOARD} --packages chromeos-base/regmon
TEST=dbus-send to regmon with/without the
--enable-features=CrOSLateBootRegmonPolicyMonitoringEnabled line in
/etc/chrome_dev.conf

Cq-Depend: chromium:5513819
Change-Id: I5834363e7601572a713eeb49026ec3d3bd6f7dcd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514242
Commit-Queue: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Aiden Chiavatti <chiav@chromium.org>
Tested-by: Chris Mullins <crmullins@chromium.org>
Reviewed-by: Ramya Gopalan <ramyagopalan@google.com>

--- a/regmon/BUILD.gn
+++ b/regmon/BUILD.gn
@@ -23,6 +23,7 @@ pkg_config("target_defaults") {
     "dbus-1",
     "libbrillo",
     "libchrome",
+    "libfeatures",
     "system_api",
   ]
 }
@@ -34,6 +35,7 @@ executable("regmond") {
   deps = [
     "//regmon/daemon:regmon_daemon",
     "//regmon/dbus:dbus_adaptor",
+    "//regmon/features:regmon_features",
     "//regmon/metrics:metrics_reporter",
     "//regmon/regmon:regmon_impl",
     "//regmon/regmon:regmon_service",
@@ -86,6 +88,7 @@ if (use.test) {
     deps = [
       "//common-mk/testrunner",
       "//regmon/daemon:unit_tests",
+      "//regmon/features:unit_tests",
       "//regmon/metrics:unit_tests",
       "//regmon/regmon:unit_tests",
     ]
