--- a/regmon/init/regmond.conf
+++ b/regmon/init/regmond.conf
@@ -10,11 +10,9 @@ author       "chromium-os-dev@chromium.org"
 stop on stopping ui
 
 respawn
-respawn limit 3 10  # if the job respawns 3 times in 10 seconds, stop trying.
+respawn limit 3 60  # if the job respawns 3 times in a minute, stop trying.
 
-# Allow us to be killed as we are not critical to the system. If we have a
-# leak while collecting reports, better to crash & restart than to OOM-panic
-# the system.
+# Allow us to be killed as we are not critical to the system.
 oom score -100
 
 # Minijail forks off the desired process.
