diagnostics: Implement sensitive sensor routine V2
BUG=b:329377632
TEST=FEATURES=test emerge-volteer diagnostics
TEST=FEATURES=test emerge-eve diagnostics
TEST=(on eve) cros-health-tool diag sensitive_sensor_v2

NO_IFTTT=Sensitive sensor routine V2 is not launched.

Change-Id: I8facbb552815110fbe2b4b13c54a0dd0e4f6944e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5512366
Reviewed-by: Kerker Yang <kerker@chromium.org>
Tested-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/routines/sensor/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/sensor/BUILD.gn
@@ -5,6 +5,7 @@
 source_set("sensor") {
   sources = [
     "sensitive_sensor.cc",
+    "sensitive_sensor_v2.cc",
     "sensor_detail.cc",
     "sensor_existence_checker.cc",
   ]
@@ -27,6 +28,7 @@ if (use.test) {
   source_set("sensor_test") {
     sources = [
       "sensitive_sensor_test.cc",
+      "sensitive_sensor_v2_test.cc",
       "sensor_detail_test.cc",
       "sensor_existence_checker_test.cc",
     ]
