ml_core: run tests via gn files
This will let us drop boilerplate in the ebuild.

BUG=b:187792043
TEST=`FEATURES=test emerge-amd64-generic ml-core-tests` ran the tests

Change-Id: Ic47bb1d3ccfb977dfa7a7947c065db43bd2da0de
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5512367
Reviewed-by: Nikolas Bowe <nbowe@google.com>
Reviewed-by: Jim Pollock <jmpollock@chromium.org>
Commit-Queue: Nikolas Bowe <nbowe@google.com>
Commit-Queue: Mike Frysinger <vapier@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>
Auto-Submit: Mike Frysinger <vapier@chromium.org>

--- a/ml_core/tests/BUILD.gn
+++ b/ml_core/tests/BUILD.gn
@@ -46,6 +46,7 @@ if (use.test) {
       "png_io_test.cc",
       "test_utilities.cc",
     ]
+    run_test = true
     configs += [ ":target_defaults" ]
     deps = [ "//ml_core:libcros_ml_core" ]
   }
