libhwsec-fundation: Complete tlcl wrapper
Add FakeTlclWrapper to stub vboot/tlcl library. It is a copy of
init/tpm_encryption/tlcl_stub.cc, now removed.

Extend MockTlclWrapper to allow full mocking of the Tlcl interface.

Remove dependency on vboot_host for libhwsec-foundation clients.
Remove inclusion of include/vboot.h, only tss_constants are needed.

Add tlcl object to objects that need to access the TPM (tpm,
nvram_space). The global stub object is gone.

BUG=b:5516035
TEST=compile

Cq-Depend: chromium:5516035
Change-Id: I37361f886b683fff0ed14f5b76c94fa3147de495
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5516739
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -79,7 +79,6 @@ pkg_config("target_defaults") {
     "libstorage_platform",
     "libstorage_storage_container",
     "re2",
-    "vboot_host",
   ]
   libs = [
     "bootstat",
@@ -92,6 +91,7 @@ pkg_config("target_defaults") {
 static_library("utils") {
   sources = [ "utils.cc" ]
   configs += [ ":target_defaults" ]
+  pkg_deps = [ "vboot_host" ]
 }
 
 static_library("libcrosstartup") {
@@ -228,7 +228,6 @@ static_library("tpm_encryption_lib") {
   ]
   configs += [ ":target_defaults" ]
   defines = [ "CHROMEOS_ENVIRONMENT=1" ]
-  pkg_deps = [ "vboot_host" ]
 
   if (use.tpm2) {
     sources += [ "tpm_encryption/tpm2.cc" ]
@@ -331,6 +330,7 @@ if (use.test) {
       ":test_config",
     ]
     run_test = true
+    libs = [ "hwsec-foundation-mock" ]
     deps = [
       ":libcrosstartup",
       "//common-mk/testrunner",
@@ -381,13 +381,13 @@ if (use.test) {
   executable("tpm_encryption_tests") {
     sources = [
       "tpm_encryption/encryption_key_test.cc",
-      "tpm_encryption/tlcl_stub.cc",
       "tpm_encryption/tpm_setup_test.cc",
     ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
     ]
+    libs = [ "hwsec-foundation-mock" ]
     deps = [
       ":tpm_encryption_lib",
       "//common-mk/testrunner",
