heartd: Create sheriff class for running shift work
Most of the heartd work is periodic shift work including the old ones.
Hence creating a class to uniform the job. Migrating the existing ones
will be in the near future.

BUG=b:289023919
TEST=Manual test on DUT

Change-Id: I42a4cbc1272e6b37ec4cfb3bd9a83639641593b9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514227
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -23,6 +23,7 @@ source_set("libheartd") {
     "heartd.cc",
     "mojo_service.cc",
     "scavenger.cc",
+    "top_sheriff.cc",
   ]
   configs += [ ":target_defaults" ]
   deps = [
