--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -16,6 +16,7 @@ pkg_config("target_defaults") {
 source_set("libheartd") {
   sources = [
     "action_runner.cc",
+    "context.cc",
     "database.cc",
     "dbus_connector_impl.cc",
     "heartbeat_manager.cc",
