camera: Update diagnostics IUSE flag to camera_diagnostics
Rename |camera_feature_diagnostics| IUSE flag to |camera_diagnostics|
to properly reflect what it actually is.

BUG=b:304912538
TEST=cros build-packages -b <B> --withtest

Cq-Depend: chromium:5507704
Change-Id: Id8018a1fb7a3c9c4dadbbe41ec714827bdc105ad
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514231
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>

--- a/camera/hal_adapter/BUILD.gn
+++ b/camera/hal_adapter/BUILD.gn
@@ -56,7 +56,7 @@ executable("cros_camera_service") {
     "cros_camera_main.cc",
     "vendor_tag_ops_delegate.cc",
   ]
-  if (use.camera_feature_diagnostics) {
+  if (use.camera_diagnostics) {
     sources += [ "camera_diagnostics_client_impl.cc" ]
   }
   if (use.camera_angle_backend) {
