--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -309,7 +309,7 @@ source_set("stream_manipulator") {
     "//camera/common/stream_manipulator_manager.cc",
     "//camera/common/sw_privacy_switch_stream_manipulator.cc",
   ]
-  if (use.camera_feature_diagnostics) {
+  if (use.camera_diagnostics) {
     sources += [ "//camera/common/diagnostics_stream_manipulator.cc" ]
   }
   public_configs = [ ":target_defaults" ]
