crash: Collect hermes logs upon crash
BUG=b:319215430
TEST=pkill -11 hermes

Change-Id: I98df04d5a7e4540b65dce38a56ace54fa221af84
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5513669
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Pavan Holla <pholla@google.com>
Reviewed-by: Madhav <madhavadas@google.com>
Commit-Queue: Pavan Holla <pholla@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -834,6 +834,13 @@ ModemManager=\
     tail -n 100 /var/log/net.log | grep -v "wifi\|wpa\|wlan\|eth\|nl80211"; \
     echo EOF
 
+hermes=\
+    echo "===/var/log/messages==="; \
+    tail -n 20 /var/log/messages; \
+    echo "===/var/log/net.log==="; \
+    tail -n 100 /var/log/net.log | grep -v "wifi\|wpa\|wlan\|eth\|nl80211"; \
+    echo EOF
+
 cellular-failure=\
     echo "===/var/log/messages==="; \
     tail -n 20 /var/log/messages; \
