--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -54,14 +54,15 @@ config("host_target_defaults") {
   configs = [ ":host_target_defaults_pkgs" ]
   defines = [
     "USE_BIG_GL=${use.libglvnd}",
+    "USE_BOREALIS_HOST=${use.borealis_host}",
     "USE_CROSVM_CROSS_DOMAIN_CONTEXT=${use.cross_domain_context}",
+    "USE_CROSVM_CROSS_DOMAIN_CONTEXT_BOREALIS=${use.cross_domain_context_borealis}",
     "USE_CROSVM_FIXED_BLOB_MAPPING=${use.crosvm_fixed_blob_mapping}",
     "USE_CROSVM_VENUS_GWP_ASAN=${use.venus_gwp_asan}",
     "USE_CROSVM_VIRTGPU_NATIVE_CONTEXT=${use.virtgpu_native_context}",
     "USE_CROSVM_VIRTIO_VIDEO=${use.crosvm_virtio_video}",
     "USE_CROSVM_VULKAN=${use.vulkan}",
     "USE_PMEM_DEVICE_FOR_ROOTFS=${use.amd64}",
-    "USE_BOREALIS_HOST=${use.borealis_host}",
   ]
 
   # TODO(b/331634345): Fix thread safety violations so we can turn this back on.
