heartd: Use sheriff framework to record boot metrics
This is a migration work. This CL also remove the Context class which
has more disadvantage than advantage. For example, it could make the
code not easy to read because Context can hold lots of objects that a
sheriff never uses.

BUG=none
TEST=FEATURES=test emerge-rex heartd
TEST=manual run on DUT

Change-Id: Ifa20c3519d19078da2eaefe3ab75a548a1c33749
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514329
Reviewed-by: Stanisław Kardach <skardach@google.com>
Reviewed-by: Denny Huang <dennyh@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -16,7 +16,6 @@ pkg_config("target_defaults") {
 source_set("libheartd") {
   sources = [
     "action_runner.cc",
-    "context.cc",
     "database.cc",
     "dbus_connector_impl.cc",
     "heartbeat_manager.cc",
@@ -28,6 +27,7 @@ source_set("libheartd") {
   ]
   configs += [ ":target_defaults" ]
   deps = [
+    "//heartd/daemon/sheriffs:sheriffs",
     "//heartd/daemon/utils:utils",
     "//heartd/mojom:libheartd_mojo_bindings",
   ]
@@ -51,6 +51,7 @@ if (use.test) {
     ]
     deps = [
       ":libheartd",
+      "//heartd/daemon/sheriffs:sheriffs_test",
       "//heartd/daemon/test_utils:test_utils",
       "//heartd/daemon/utils:utils_test",
     ]
