debugd: Add bluetooth_tool
bluetooth_tool is used to control bluetooth traffic logging activity.
For details, please refer to go/deploy-hcidoc.

Also give debugd access to SessionManager's RetrievePrimarySession,
because bluetooth_tool needs the information of the current user to
save the log in the user's daemon-cache.

BUG=b:327298508
TEST=Directly call the DBus APIs BluetoothStartBtsnoop and
     BluetoothStopBtsnoop. Observe the following.
     (1) When not signed in, StartBtsnoop does nothing
     (2) When signed in, StartBtsnoop starts a btmon process which
         writes to /run/daemon-store/debugd/<hash>/capture.btsnoop
     (3) Calling StartBtsnoop when there's already a running btmon
         process will terminate it, and starts a new one.
     (4) Calling StopBtsnoop will stop a running btmon process if
         any, otherwise it does nothing
     (5) Signing out terminates a running btmon process, effectively
         is the same as calling StopBtsnoop.

Change-Id: I01e57bd308099cc2335c36fffdd2c059e3ed9089
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5514332
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Commit-Queue: Archie Pusaka <apusaka@chromium.org>
Tested-by: Archie Pusaka <apusaka@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>

--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -116,6 +116,7 @@ static_library("libdebugd") {
   sources = [
     "src/battery_tool.cc",
     "src/binary_log_tool.cc",
+    "src/bluetooth_tool.cc",
     "src/bluetooth_utils.cc",
     "src/constants.cc",
     "src/container_tool.cc",
@@ -455,6 +456,7 @@ if (use.test) {
   executable("debugd_testrunner") {
     sources = [
       "src/binary_log_tool_test.cc",
+      "src/bluetooth_tool_test.cc",
       "src/crash_sender_tool_test.cc",
       "src/cups_tool_test.cc",
       "src/dev_mode_no_owner_restriction_test.cc",
