--- a/login_manager/SessionManager.conf
+++ b/login_manager/SessionManager.conf
@@ -300,4 +300,10 @@
            send_interface="org.chromium.SessionManagerInterface"
            send_member="RetrievePrimarySession"/>
   </policy>
+
+  <policy user="debugd">
+    <allow send_destination="org.chromium.SessionManager"
+           send_interface="org.chromium.SessionManagerInterface"
+           send_member="RetrievePrimarySession"/>
+  </policy>
 </busconfig>
