--- a/hammerd/init/hammerd.conf
+++ b/hammerd/init/hammerd.conf
@@ -96,6 +96,7 @@ script
     VENDOR_ID="$(cros_config /detachable-base vendor-id)" || true
     PRODUCT_ID="$(cros_config /detachable-base product-id)" || true
     USB_PATH="$(cros_config /detachable-base usb-path)" || true
+    I2C_PATH="$(cros_config /detachable-base i2c-path)" || true
 
     # Touchpad FW is optional
     tp_name="$(cros_config /detachable-base touch-image-name)" || true
@@ -111,10 +112,19 @@ script
   [ -z "${EC_IMAGE_PATH}" ] && missing_conf="$missing_conf EC_IMAGE_PATH"
   [ -z "${VENDOR_ID}" ] && missing_conf="$missing_conf VENDOR_ID"
   [ -z "${PRODUCT_ID}" ] && missing_conf="$missing_conf PRODUCT_ID"
-  [ -z "${USB_PATH}" ] && missing_conf="$missing_conf USB_PATH"
+  if [ -z "${USB_PATH}" -a -z "${I2C_PATH}" ]; then
+    missing_conf="$missing_conf USB_PATH I2C_PATH"
+  fi
   if [ -n "${missing_conf}" ]; then
     logger -t ${UPSTART_JOB} "Following configs are missing:${missing_conf}"
     exit 1
+  fi
+
+  path_arg=
+  if [ -n "${USB_PATH}" ]; then
+    path_arg="--usb_path=${USB_PATH}"
+  else
+    path_arg="--i2c_path=${I2C_PATH}"
   fi
 
   exit_status=0
@@ -123,7 +133,7 @@ script
                        --touchpad_image_path="${TOUCHPAD_IMAGE_PATH}" \
                        --vendor_id="${VENDOR_ID}" \
                        --product_id="${PRODUCT_ID}" \
-                       --usb_path="${USB_PATH}" \
+                       "${path_arg}" \
                        --autosuspend_delay_ms="${AUTOSUSPEND_DELAY_MS}" \
                        --at_boot="${AT_BOOT}" \
                        --update_if="${UPDATE_IF}" || exit_status="$?"
