primary_io_manager: exit early if not running on chromebox
PrimaryIoManager is only needed to run on chromebox-format devices, so
it should exit cleanly (preventing upstart respawn) if it detects it is
not running on such a device.

BUG=b:308434587
TEST=unit tests
TEST=deploy to DUT with hardcoded test values

Change-Id: Ic5e73ed1e2c44df209bcade44e9201b8dd00e6ab
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5526753
Tested-by: maciek swiech <drmasquatch@google.com>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>
Commit-Queue: maciek swiech <drmasquatch@google.com>

--- a/primary_io_manager/minijail/primary_io_manager.conf
+++ b/primary_io_manager/minijail/primary_io_manager.conf
@@ -10,6 +10,7 @@ ambient
 # Filesystem access rules.
 fs-default-paths
 fs-path-ro = /dev
+fs-path-ro = /run/chromeos-config/v1
 fs-path-ro = /sys
 
 c = 0x300b
