--- a/primary_io_manager/primary_io_manager.conf
+++ b/primary_io_manager/primary_io_manager.conf
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-description     "Pirmary Io Management daemon"
+description     "Primary Io Management daemon"
 author          "chromium-os-dev@chromium.org"
 
 start on starting system-services
@@ -11,6 +11,8 @@ expect fork
 # primary_io_manager maintains some state but can otherwise recover.
 oom score -100
 respawn
+# if primary_io_manager has a non-error exit, don't attempt to respawn.
+normal exit 0
 
 exec minijail0 \
     --config /usr/share/minijail/primary_io_manager.conf -- \
