crash: Collect storage info with cryptohome crashes
On reven there are some long-standing crashes from the mounter timing
out. The cause is unclear, but one theory (see b/300839936#comment4) is
that these devices have slow HDDs and are bogged down with other IO
operations. Add storage info to crashes for cryptohomed and
cryptohome-namespace-mounter to help check this possibility.

BUG=b:318546219
TEST=cros_workon start chromeos-base/crash-reporter
TEST=emerge-reven chromeos-base/crash-reporter
TEST=cros build-image -r test
TEST=On image:
TEST=killall -SIGILL cryptohomed
TEST=cat /var/spool/crash/cryptohomed*.log

Change-Id: I1038e14da3f54d958971db874a35126d1104e010
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5521740
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -695,12 +695,16 @@ cryptohomed=\
   echo "===/var/log/messages==="; \
   tail -n 200 /var/log/messages | \
   grep -e trunksd -e tpm_manager -e cryptohome; \
+  echo "===/var/log/storage_info.txt==="; \
+  cat /var/log/storage_info.txt; \
   echo EOF
 
 cryptohome-namespace-mounter=\
   echo "===/var/log/messages==="; \
   tail -n 200 /var/log/messages | \
     grep -e trunksd -e tpm_manager -e cryptohome; \
+  echo "===/var/log/storage_info.txt==="; \
+  cat /var/log/storage_info.txt; \
   echo EOF
 
 cryptohome-proxy=\
