init: startup: Use tpm->IsOwned
In IsTPMOwned, call the TPM object from tpm_encrypted to know if the TPM
is owned instead of reimplementing it.

BUG=b:172221451
TEST=Unit tests.

Change-Id: I3fc17ac8ca58f937c42ff10d725aa39acd76833b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5529097
Auto-Submit: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Alexis Savery <asavery@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -116,6 +116,7 @@ static_library("libcrosstartup") {
   deps = [
     ":libfile_attrs_cleaner",
     ":libinit_utils",
+    ":libtpm_encryption",
   ]
 }
 
