resourced: LLC cache allocation during gamemode
Enables LLC cache allocation when gamemode is on on intel devices.  Modifies MSR registers on volteer and brya devices to bias LLC for gaming.
(reland of crrev/c/5177550).

BUG=b:321069947
TEST=emerge-volteer resourced

Change-Id: I01d58a6e2e68cc463cefb503f93a9829ec1aff5b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5540189
Tested-by: Parshuram Sangle <parshuram.sangle@intel.com>
Reviewed-by: Parshuram Sangle <parshuram.sangle@intel.com>
Reviewed-by: Vovo Yang <vovoy@chromium.org>
Commit-Queue: Shah Hossain <shahadath@google.com>

--- a/resourced/init/resourced.conf
+++ b/resourced/init/resourced.conf
@@ -43,12 +43,20 @@ script
     SCHED_MOUNT="-b /sys/kernel/debug/sched,,1"
   fi
 
+  # /cpu/dev used in gamemode to access MSR register.
+  # Not avaialble on ARM devices.
+  CPU_DEV_MOUNT=""
+  if [ -d "/dev/cpu" ]; then
+    CPU_DEV_MOUNT="-b /dev/cpu,,1"
+  fi
+
   exec minijail0                                                        \
     --config /usr/share/minijail/resourced.conf                         \
     --seccomp-bpf-binary /usr/share/policy/resourced-seccomp.policy.bpf \
     ${POWER_CAP_MOUNT}                                                  \
     ${THP_MOUNT}                                                        \
     ${SCHED_MOUNT}                                                      \
+    ${CPU_DEV_MOUNT}                                                    \
     -- /usr/bin/resourced
 end script
 
