--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -101,7 +101,8 @@ G
 #
 # CAP_SYS_PTRACE is needed to read various parts of sysfs. process_vm_read
 # and other more dangerous syscalls are blocked by seccomp.
-c = cap_sys_resource,cap_sys_nice,cap_sys_ptrace=e
+# CAP_SYS_RAWIO added for accessing x86 MSRs in gamemode
+c = cap_sys_resource,cap_sys_nice,cap_sys_ptrace,cap_sys_rawio=e
 
 # No new privileges (no_new_privs).
 n
