libtouchraw: Add a consumer for reshaping the heatmap
Reshaping is sometimes needed when feeding the heatmap into a consumer
that is expecting the heatmap to have a specific shape. This change
introduces a reshaper class that allows the heatmap to be cropped
inwards from any of it's boundaries.

BUG=b:332429708, b:331432877
TEST=CQ

Change-Id: Ie6235687392f7415354a90892a0ccd97d5a50a15
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5523865
Tested-by: Henry Barnor <hbarnor@chromium.org>
Reviewed-by: Jingyuan Liang <jingyliang@chromium.org>
Commit-Queue: Henry Barnor <hbarnor@chromium.org>
Reviewed-by: Sean O'Brien <seobrien@chromium.org>

--- a/libtouchraw/BUILD.gn
+++ b/libtouchraw/BUILD.gn
@@ -29,6 +29,7 @@ shared_library("libtouchraw") {
     "defragmenter.cc",
     "parser.cc",
     "reader.cc",
+    "reshaper.cc",
     "touchraw_interface.cc",
   ]
   configs += [ ":target_defaults_pkg_deps" ]
@@ -38,6 +39,7 @@ shared_library("libtouchraw") {
 install_config("install_headers") {
   sources = [
     "consumer_interface.h",
+    "crop.h",
     "touchraw.h",
     "touchraw_export.h",
   ]
@@ -61,6 +63,7 @@ if (use.test) {
       "defragmenter_test.cc",
       "parser_test.cc",
       "reader_test.cc",
+      "reshaper_test.cc",
     ]
     configs += [
       "//common-mk:test",
