heartd: Add unittest for sheriff framework
This unittest tests the top_sheriff.cc and the base class of sheriff.h.

BUG=none
TEST=FEATURES=test emerge-rex heartd

Change-Id: Ide0e2b20bfced6f7e40d4a1c1ab52bcef73f6992
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5524319
Commit-Queue: Kerker Yang <kerker@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -43,6 +43,7 @@ if (use.test) {
       "heartbeat_tracker_test.cc",
       "heartd_test.cc",
       "scavenger_test.cc",
+      "top_sheriff_test.cc",
     ]
     configs += [
       "//common-mk:test",
